--- a/index.html
+++ b/index.html
@@ -20,22 +20,26 @@
         remotely.</P>
 
       <SECTION>
-        <HEADER><H2>Open Source and Blogging</H2></HEADER>
+        <HEADER><H2>Hacking and Blogging</H2></HEADER>
+        
+        <P>Currently I’m most interested in packet networking, the
+          hardware-software interface, tiny compilers, and tiny language VMs.</P>
+        
+        <P>I enjoy social coding, and you can follow what I am up
+          to on <A HREF="https://github.com/eugeneia" REL="me">GitHub</A>. I
+          also keep a long-form <A HREF="blog/">technical journal</A>.</P>
 
-        <P>I helped build <A HREF="http://snabb.co">Snabb</A>, a software
-          toolkit for high-performance networking in userspace, written in the
-          high-level programming language Lua.</P>
+        <P>I help build <A HREF="http://snabb.co">Snabb</A>, a software toolkit
+          for high-performance networking in userspace, written in the high-level
+          programming language Lua.</P>
 
-        <P>Currently, I am working on traffic encryption at scale.
+        <P>I also work on traffic encryption at scale.
           <A HREF="https://github.com/inters/vita">Vita</A> is my effort to
           make this technology as broadly accessible as possible.</P>
 
-        <P>You can get support and consulting services for Vita and other open
-          source technologies from <A HREF="https://inters.co/">Inters</A>.</P>
-
-        <P>I am in love with social coding, and you can follow what I am up
-          to on <A HREF="https://github.com/eugeneia" REL="me">GitHub</A>. I
-          also keep a long-form <A HREF="blog/">technical journal</A>.</P>
+        <P>You can get support and consulting services for projects and open
+          source technologies I work with from
+          <A HREF="https://inters.co/">Inters</A>.</P>
       </SECTION>
 
       <SECTION>
